--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-octicon": "^3.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
