--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "react-native-hide-show-password-input": "^1.0.7",
     "react-password-mask": "^3.3.1",
+    "react-pose": "^4.0.4",
     "sendgrid": "^5.2.3",
     "stripe": "^6.10.0"
   }
