--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-octicon": "^3.0.1",
+    "react-pose": "^4.0.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
