--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "lodash": "^4.17.11",
     "materialize-css": "^0.100.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
