--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     }
   },
   "dependencies": {
+    "aws-amplify": "1.1.28",
+    "@aws-amplify/analytics": "1.2.16",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "lodash": "^4.17.11",
